--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,8 @@
 *.html text
 *.css text
 
+*.pdf -text
+
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
 
